--- a/index.html
+++ b/index.html
@@ -41,23 +41,8 @@
             </div>
           </div>
         </div>
-        <div class="card">
-          <img src="./236.webp" alt="" />
-          <div class="content">
-            <h3>title</h3>
-            <a href="">about movie</a>
-            <button>add to basket</button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./236.webp" alt="" />
-          <div class="content">
-            <h3>title</h3>
-            <button type="button">about movie</button>
-            <button>add to basket</button>
-          </div>
-        </div>
       </section>
     </main>
+    <script src="scripts/homepage.js"></script>
   </body>
 </html>
