--- a/checkout/index.html
+++ b/checkout/index.html
@@ -20,17 +20,9 @@
     </nav>
     <main>
       <h1>Checkout</h1>
-      <div class="card">
-        <div class="image__wrapper">
-          <img src="../236.webp" alt="" />
-        </div>
-        <div class="text">
-          <p>title with longer text here khihi he ihfihesih sfih hih</p>
-          <p>145</p>
-          <button>remove</button>
-        </div>
-      </div>
+      <div id="movieList">loading</div>
       <button class="pay"><a href="./confirmation/">Pay now</a></button>
     </main>
+    <script src="../scripts/checkout.js"></script>
   </body>
 </html>
