--- a/index.html
+++ b/index.html
@@ -19,26 +19,13 @@
 
       <a href="./checkout/index.html">basket</a>
     </nav>
-    <!-- <button type="button">ADD TO BASKET</button> -->
 
     <main>
       <h1>Buy movies</h1>
-      <div>
-        <a href="http://">thriller</a>
-        <a href="http://">comedy </a>
-        <a href="">action</a>
-      </div>
+    
       <section class="container">
         <div class="card">
-          <img class="card__image" src="./236.webp" alt="" />
-          <div class="content">
-            <h3>title</h3>
-            <div class="card__footer">
-              <a href="./product/"
-                >about movie <img class="arrow" src="./images/arrow.svg" alt=""
-              /></a>
-              <button>add to basket</button>
-            </div>
+    loading...
           </div>
         </div>
       </section>
