--- a/product/index.html
+++ b/product/index.html
@@ -18,27 +18,7 @@
       <a href="../">Home</a>
       <a href="../checkout/index.html">basket</a>
     </nav>
-    <main>
-      <div class="image__wrapper">
-        <img src="../236.webp" alt="" />
-      </div>
-      <div class="content">
-        <h1>titel</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-          egestas, lorem quis condimentum interdum, tellus elit fermentum diam,
-          non finibus tellus elit nec velit. Curabitur pellentesque vulputate
-          erat sed luctus. Donec dapibus ultrices sem et varius. Proin molestie
-          a risus at posuere. Aliquam egestas, ex ac aliquet lobortis, sapien
-          risus consequat turpis, a commodo elit turpis a mi. Suspendisse
-          venenatis porttitor luctus. Quisque elementum, nunc nec pulvinar
-          aliquam, dolor nisl condimentum arcu, sed laoreet lorem eros vitae
-          justo. Duis consequat mi a sapien ullamcorper, at feugiat urna
-          feugiat.
-        </p>
-        <p>150 NOK</p>
-        <button><a href="../checkout/">add to basket</a></button>
-      </div>
-    </main>
+    <main>loading</main>
+    <script src="../scripts/product.js"></script>
   </body>
 </html>
